resources/app-sre-stage/cincinnati-stage/cincinnati.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-prod-http
  labels:
    service: cincinnati-policy-engine
  name: cincinnati-route-stg
spec:
  host: cc533os557xkwku.api.stage.openshift.com
  port:
    targetPort: policy-engine
  to:
    kind: Service
    name: cincinnati-policy-engine
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
