resources/app-sre-stage/cincinnati-stage/upgrades-info.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    service: cincinnati-policy-engine
  name: upgrades-info
spec:
  host: api.stage.openshift.com
  path: "/api/upgrades_info"
  port:
    targetPort: policy-engine
  to:
    kind: Service
    name: cincinnati-policy-engine
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
